--- a/WebApplication/Views/Users/UserAccount.cshtml
+++ b/WebApplication/Views/Users/UserAccount.cshtml
@@ -4,7 +4,7 @@
 }
 @model WebApplication.Models.UserDataModel
 
-</div>
+@*</div>*@
 <div style="font-family: Arial, sans-serif; max-width: 1500px; margin: 0 auto; padding: 20px; background-color: #f9f9f9; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
 
     <h2 style="font-size: 32px; color: #333; margin-bottom: 20px;">Hi, @Model.Username</h2>
