--- a/WebApplication/Views/HomeUser/Cart.cshtml
+++ b/WebApplication/Views/HomeUser/Cart.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/ULayout.cshtml";
 }
 
-
+@model WebApplication.Models.UserDataModel
 
 <!-- Hero Banner start -->
 <div class="page-title-banner">
