--- a/WebApplication/Views/HomeAdmin/HomeAdmin2.cshtml
+++ b/WebApplication/Views/HomeAdmin/HomeAdmin2.cshtml
@@ -197,7 +197,7 @@
 
 
                 </div>
-               @{ var prod = productTable.FirstOrDefault();
+               @*@{ var prod = productTable.FirstOrDefault();
                    <div class="sales">
                     <div class="tag">New</div>
                     <div class="off">
@@ -215,7 +215,7 @@
                         <img src="@prod.ImagePath" alt="">
                     </div>
                  </div>
-               }
+               }*@
             </div>
         </div>
     </section>
