--- a/WebApplication/Views/Shared/ULayout.cshtml
+++ b/WebApplication/Views/Shared/ULayout.cshtml
@@ -1,7 +1,5 @@
 ﻿@using System.Web.Optimization
 
-@model WebApplication.Models.UserDataModel
-
 <!DOCTYPE html>
 
 <html>
@@ -47,11 +45,7 @@
                             </li>
                             <li class="menu-item">
 
-                                @{
-                                    var jsonModel = Newtonsoft.Json.JsonConvert.SerializeObject(Model);
-                                }
-
-                                @Html.ActionLink("Home", "HomeUsers", "HomeUser", new { userDataModel = jsonModel }, new { @class = "menu-link" })
+                                @Html.ActionLink("Home", "HomeUsers", "HomeUser", new { @class = "menu-link" })
                             </li>
 
 
@@ -60,7 +54,7 @@
 
                             <li class="menu-item">
 
-                                @Html.ActionLink("About us", "About", "HomeUser", new { userDataModel = jsonModel }, new { @class = "menu-link" })
+                                @Html.ActionLink("About us", "About", "HomeUser", new { @class = "menu-link" })
                             </li>
                         </ul>
                     </div>
@@ -77,7 +71,7 @@
                     <div class="right-nav">
                         <ul class="navbar-nav m-0">
                             <li class="menu-item">
-                                @Html.ActionLink("AccountUser", "UserAccountWithString", "Users", new { userDataModel = jsonModel }, new { @class = "menu-link" })
+                                @Html.ActionLink("AccountUser", "UserAccount", "Users", new { @class = "menu-link" })
                             </li>
                             <li class="menu-item">
                                 @Html.ActionLink("Logout", "LogOut", "Login", new { area = "" }, new { @class = "menu-link" })
@@ -87,7 +81,7 @@
 
 
                             <li class="has-children">
-                                @Html.ActionLink("Shop", "ShopListing", "HomeUser", new { userDataModel = jsonModel }, new { @class = "menu-link" })
+                                @Html.ActionLink("Shop", "ShopListing", "HomeUser", new { @class = "menu-link" })
 
                             </li>
                             <li class="has-children">
