--- a/WebApplication/Views/Users/UserAccount.cshtml
+++ b/WebApplication/Views/Users/UserAccount.cshtml
@@ -2,12 +2,17 @@
     ViewBag.Title = "UserAccount";
     Layout = "~/Views/Shared/LayoutUsers.cshtml";
 }
-@model WebApplication.Models.UserDataModel
+@*@model WebApplication.Models.UserDataModel*@
+
+@using WebApplication.Models
+@{
+    UserDataModel model = (UserDataModel)System.Web.HttpContext.Current.Session["userModel"];
+}
 
 @*</div>*@
 <div style="font-family: Arial, sans-serif; max-width: 1500px; margin: 0 auto; padding: 20px; background-color: #f9f9f9; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
 
-    <h2 style="font-size: 32px; color: #333; margin-bottom: 20px;">Hi, @Model.Username</h2>
+    <h2 style="font-size: 32px; color: #333; margin-bottom: 20px;">Hi, @{model.Username} </h2>
 
     <p style="font-size: 18px; line-height: 1.6; color: #666;">
         Welcome to your user account. Here, you have access to all the tools and features necessary to explore our toy store. From browsing products to managing your orders, everything is designed to provide you with a seamless shopping experience. Feel free to navigate through the various sections and make the most out of your user privileges.
