--- a/WebApplication/Views/HomeUser/Wishlist.cshtml
+++ b/WebApplication/Views/HomeUser/Wishlist.cshtml
@@ -180,7 +180,7 @@
 
 
                                 </div>
-                                @*@{ var prod = productTable[0];
+                                @{ var prod = productTable[0];
                                     <div class="sales">
                                         <div class="tag">New</div>
                                         <div class="off">
@@ -198,7 +198,7 @@
                                             <img src="@prod.ImagePath" alt="">
                                         </div>
                                     </div>
-                                }*@
+                                }
                             </div>
                         </div>
                     </section>
