--- a/WebApplication/Views/HomeUser/Cart.cshtml
+++ b/WebApplication/Views/HomeUser/Cart.cshtml
@@ -27,147 +27,86 @@
 <div class="page-content">
 
     <!-- Blog Detail Start -->
-    <section class="cart p-96">
+    <section class="wishlist p-96">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-8 mb-xl-0 mb-32">
-                    <div class="list-product mb-32">
-                        <img src="~/assets/media/product/p-27.png" alt="">
-                        <div class="content">
-                            <div class="frame">
-                                <div class="name">
-                                    <h5 class="h-21 sec-2 light-black">Item:</h5>
-                                    <h5 class="h-21 sec light-black">Buzz Lightyear</h5>
-                                </div>
-                                <div class="name">
-                                    <h5 class="h-21 sec-2 light-black">SKU</h5>
-                                    <h5 class="h-21 sec light-black">12 323 43</h5>
-                                </div>
-                            </div>
-                            <div class="frame end">
-                                <h5 class="h-21 sec-2 light-black">Price</h5>
-                                <h5 class="h-21 sec light-black">$32.00</h5>
-                            </div>
-                            <div class="frame center">
-                                <h5 class="h-21 sec-2 light-black">Quantity</h5>
-                                <div class="quantity quantity-wrap">
-                                    <input class="decrement" type="button" value="-">
-                                    <input type="text" name="quantity" value="2" maxlength="2" size="1" class="number">
-                                    <input class="increment" type="button" value="+">
-                                </div>
-                            </div>
-                            <div class="frame center">
-                                <h5 class="h-21 sec-2 light-black">Sub Total</h5>
-                                <h5 class="h-21 sec light-black">$64 .00</h5>
-                            </div>
 
-                        </div>
-                    </div>
-                    <div class="list-product mb-32">
-                        <img src="~/assets/media/product/p-28.png" alt="">
-                        <div class="content">
-                            <div class="frame">
-                                <div class="name">
-                                    <h5 class="h-21 sec-2 light-black">Item:</h5>
-                                    <h5 class="h-21 sec light-black">Bullseye Plush</h5>
-                                </div>
-                                <div class="name">
-                                    <h5 class="h-21 sec-2 light-black">SKU</h5>
-                                    <h5 class="h-21 sec light-black">02 486 98</h5>
-                                </div>
-                            </div>
-                            <div class="frame end">
-                                <h5 class="h-21 sec-2 light-black">Price</h5>
-                                <h5 class="h-21 sec light-black">$58.00</h5>
-                            </div>
-                            <div class="frame center">
-                                <h5 class="h-21 sec-2 light-black">Quantity</h5>
-                                <div class="quantity quantity-wrap">
-                                    <input class="decrement" type="button" value="-">
-                                    <input type="text" name="quantity" value="1" maxlength="2" size="1" class="number">
-                                    <input class="increment" type="button" value="+">
-                                </div>
-                            </div>
-                            <div class="frame center">
-                                <h5 class="h-21 sec-2 light-black">Sub Total</h5>
-                                <h5 class="h-21 sec light-black">$58.00</h5>
-                            </div>
 
-                        </div>
-                    </div>
-                    <div class="list-product mb-32">
-                        <img src="~/assets/media/product/p-29.png" alt="">
-                        <div class="content">
-                            <div class="frame">
-                                <div class="name">
-                                    <h5 class="h-21 sec-2 light-black">Item:</h5>
-                                    <h5 class="h-21 sec light-black">Melody Plush</h5>
-                                </div>
-                                <div class="name">
-                                    <h5 class="h-21 sec-2 light-black">SKU</h5>
-                                    <h5 class="h-21 sec light-black">23 648 63</h5>
-                                </div>
-                            </div>
-                            <div class="frame end">
-                                <h5 class="h-21 sec-2 light-black">Price</h5>
-                                <h5 class="h-21 sec light-black">$50.00</h5>
-                            </div>
-                            <div class="frame center">
-                                <h5 class="h-21 sec-2 light-black">Quantity</h5>
-                                <div class="quantity quantity-wrap">
-                                    <input class="decrement" type="button" value="-">
-                                    <input type="text" name="quantity" value="3" maxlength="2" size="1" class="number">
-                                    <input class="increment" type="button" value="+">
-                                </div>
-                            </div>
-                            <div class="frame center">
-                                <h5 class="h-21 sec-2 light-black">Sub Total</h5>
-                                <h5 class="h-21 sec light-black">$150.00</h5>
-                            </div>
+            @{
 
-                        </div>
-                    </div>
-                    <a href="./shop-listing-1.html" class="cus-btn primary">Continue Shopping</a>
-                </div>
-                <div class="col-xl-4">
-                    <div class="row">
-                        <div class="col-xl-12 col-lg-6">
-                            <div class="cart-detail mb-32">
-                                <h4 class="h-36 bold mb-16 light-black">Cart Detail</h4>
-                                <ul class="unstyled">
-                                    <li>
-                                        <h6 class="h-21 light-black">Items Total</h6>
-                                        <h5 class="h-21 light-black sec"> $272.00</h5>
-                                    </li>
-                                    <li>
-                                        <h6 class="h-21 light-black">Shipping Fee</h6>
-                                        <h5 class="h-21 light-black sec"> $05.00</h5>
-                                    </li>
-                                    <li>
-                                        <h6 class="h-21 light-black">Tax</h6>
-                                        <h5 class="h-21 light-black sec"> $02.90</h5>
-                                    </li>
-                                    <li class="m-0">
-                                        <h6 class="h-21 light-black">Discount</h6>
-                                        <h5 class="h-21 light-black sec"> $20.00</h5>
-                                    </li>
-                                </ul>
+                if (Model.CkeckIfCartContainItems(Model.CartId))
+                {
+
+                    <!-- Sales Start -->
+                    <section class="sales-product">
+                        <div class="container">
+                            <div class="d-flex flex-xl-row flex-column  gap-4">
+                                <div class="product st-2">
+                                    @{
+
+                                        var productTable = Model.dataForTableCart(Model.UserId);
+
+                                        foreach (var product in productTable)
+                                        {
+
+                                            if (product != null && product.IsActive)
+                                            {
+                                                <div class="product-card sec">
+                                                    <div class="img-block">
+                                                        <img src=@product.ImagePath alt="">
+                                                    </div>
+                                                    <div class="content">
+                                                        <div class="name-price">
+                                                            <div class="product-name">
+                                                                <h5>@product.ProductName</h5>
+                                                            </div>
+                                                            <div class="product-price">
+                                                                <h5 class="bold">– $@product.Price</h5>
+                                                            </div>
+                                                            <div class="product-price">
+                                                                <h5 class="bold">– $@Model.getCountInCart(Model.CartId, product.ProductId)</h5>
+                                                            </div>
+                                                        </div>
+                                                        <div class="btn-block">
+
+
+                                                            <a href="@Url.Action("ProductDetail", "HomeAdmin", new { productId = product.ProductId })" class="list-btn">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                                                                    <g clip-path="url(#clip0_1109_1878)">
+                                                                        <path d="M31.8026 15.4416C31.517 15.123 24.6467 7.62939 16.0415 7.62939C7.43641 7.62939 0.56616 15.123 0.280473 15.4416C-0.0381523 15.7977 -0.0381523 16.3361 0.280473 16.6922C0.56616 17.0108 7.43653 24.5044 16.0415 24.5044C24.6465 24.5044 31.5169 17.0108 31.8026 16.6922C32.1212 16.3361 32.1212 15.7977 31.8026 15.4416ZM16.0415 22.6294C12.4233 22.6294 9.47904 19.6851 9.47904 16.0669C9.47904 12.4487 12.4233 9.50439 16.0415 9.50439C19.6597 9.50439 22.604 12.4487 22.604 16.0669C22.604 19.6851 19.6597 22.6294 16.0415 22.6294Z" fill="#2C2D2F" />
+                                                                        <path d="M16.979 14.1919C16.979 13.2488 17.4472 12.4191 18.1595 11.9088C17.5203 11.5816 16.8075 11.3794 16.0415 11.3794C13.457 11.3794 11.354 13.4823 11.354 16.0669C11.354 18.6515 13.457 20.7544 16.0415 20.7544C18.3555 20.7544 20.2708 19.0648 20.6492 16.857C18.7613 17.4648 16.979 16.037 16.979 14.1919Z" fill="#2C2D2F" />
+                                                                    </g>
+                                                                    <defs>
+                                                                        <clipPath id="clip0_1109_1878">
+                                                                            <rect width="32" height="32" fill="white" />
+                                                                        </clipPath>
+                                                                    </defs>
+                                                                </svg>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            }
+                                        }
+                                    }
+
+
+                                </div>
+
                             </div>
                         </div>
-                        <div class="col-xl-12 col-lg-6">
-                            <div class="total">
-                                <ul class="unstyled mb-32">
-                                    <li class="m-0">
-                                        <h4 class="h-36 bold light-black">Grand Total</h4>
-                                        <h4 class="h-36 bold light-black">$259.90</h4>
-                                    </li>
-                                </ul>
-                                <button class="cus-btn primary w-100">To Checkout</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    </section>
+                    <!-- Sales End -->
+                }
+                else
+                {
+                    <h1>Cart is empty</h1>
+                }
+            }
+
+            <div>
+                <a href="@Url.Action("ShopListing", "HomeUser")" class="cus-btn primary">Continue Shopping</a>
             </div>
+
         </div>
     </section>
     <!-- Blog Detail End -->
